--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ log = "0.4.21"
 poise = "0.6.1"
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+rand = "0.8.5"
