--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ poise = "0.6.1"
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 rand = "0.8.5"
+serde = { version = "1.0.198", features = ["serde_derive"] }
+serde_json = "1.0.116"
