--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,79 @@
-{"channels":[1232064459737010247]}
+{
+  "channels": [
+    {
+      "id": "1030714032900030466",
+      "bitrate": null,
+      "parent_id": "1030714032900030464",
+      "guild_id": "1030714031880818729",
+      "type": 0,
+      "owner_id": null,
+      "last_message_id": "1232079362921332746",
+      "last_pin_timestamp": null,
+      "name": "general",
+      "permission_overwrites": [
+        {
+          "allow": "49152",
+          "deny": "0",
+          "id": "1030714031880818729",
+          "type": 0
+        }
+      ],
+      "position": 0,
+      "topic": null,
+      "user_limit": null,
+      "nsfw": false,
+      "rate_limit_per_user": 0,
+      "rtc_region": null,
+      "video_quality_mode": null,
+      "message_count": null,
+      "member_count": null,
+      "thread_metadata": null,
+      "member": null,
+      "default_auto_archive_duration": null,
+      "permissions": null,
+      "flags": 0,
+      "total_message_sent": null,
+      "available_tags": [],
+      "applied_tags": [],
+      "default_reaction_emoji": null,
+      "default_thread_rate_limit_per_user": null,
+      "status": null,
+      "default_sort_order": null,
+      "default_forum_layout": null
+    },
+    {
+      "id": "1232064459737010247",
+      "bitrate": null,
+      "parent_id": "1030714032900030464",
+      "guild_id": "1030714031880818729",
+      "type": 0,
+      "owner_id": null,
+      "last_message_id": null,
+      "last_pin_timestamp": null,
+      "name": "asdf",
+      "permission_overwrites": [],
+      "position": 2,
+      "topic": null,
+      "user_limit": null,
+      "nsfw": false,
+      "rate_limit_per_user": 0,
+      "rtc_region": null,
+      "video_quality_mode": null,
+      "message_count": null,
+      "member_count": null,
+      "thread_metadata": null,
+      "member": null,
+      "default_auto_archive_duration": null,
+      "permissions": null,
+      "flags": 0,
+      "total_message_sent": null,
+      "available_tags": [],
+      "applied_tags": [],
+      "default_reaction_emoji": null,
+      "default_thread_rate_limit_per_user": null,
+      "status": null,
+      "default_sort_order": null,
+      "default_forum_layout": null
+    }
+  ]
+}
