--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 rand = "0.8.5"
 serde = { version = "1.0.198", features = ["serde_derive"] }
 serde_json = "1.0.116"
+roux = "2.2.12"
