--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Check
+      run: cargo check
     - name: Build
       run: cargo build
     - name: Run tests
