--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,14 @@ name = "shibe-bot"
 description = "A Discord bot written in Rust, using Poise."
 license = "MIT"
 readme = "README.md"
-version = "0.3.4"
+version = "0.4.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+vergen = { version = "9.0.1", features = ["build", "cargo", "rustc"] }
+anyhow = "1.0.89"
 
 [dependencies]
 dotenvy = "0.15.0"
@@ -18,5 +22,4 @@ rand = "0.8.5"
 serde = { version = "1.0.210", features = ["serde_derive"] }
 serde_json = "1.0.128"
 roux = "2.2.13"
-rustc_version_runtime = "0.3.0"
-build-time = "0.1.3"
+structstruck = "0.4.1"
