--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,9 @@ serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.134"
 roux = "2.2.13"
 structstruck = "0.4.1"
+reqwest = { version = "0.12.12", features = ["json"] }
+octocrab = "0.42.1"
+tempfile = "3.15.0"
+self-replace = "1.5.0"
+zip = "2.2.2"
+nix = { version = "0.29.0", features = ["process"] }
